--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "serverless": "^1.27.3",
     "serverless-appsync-plugin": "^1.0.0",
     "serverless-pseudo-parameters": "^1.6.0"
   }
